--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,8 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
 
+    implementation 'io.paperdb:paperdb:2.6'
+
     def splitties_version = "3.0.0-alpha06"
     implementation("com.louiscad.splitties:splitties-permissions:$splitties_version")
     implementation("com.louiscad.splitties:splitties-typesaferecyclerview:$splitties_version")
